--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -15,7 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/calendar">Calendar</a>
       </li>
-   
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/friendFinder">Friend Finder</a>
+      </li>
   </ul>
 
   <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
@@ -75,5 +77,4 @@
   </ul>
 </div>
 </nav>
-    
-    
+
