--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -4,77 +4,76 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/workouts">Workouts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/calendar">Calendar</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/friendFinder">Friend Finder</a>
-      </li>
-  </ul>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/workouts">Workouts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/calendar">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/friendFinder">Friend Finder</a>
+            </li>
+        </ul>
 
-  <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-        <li class="nav-item dropdown" [ngClass]="{'active': notifications.length > 0}">
-          <!-- <a href="#" class="nav-link dropdown-toggle"  id="dropdown-notifications" title="notifications"><i class="fa fa-bell fa-fw fa-lg"></i></a> -->
-          <button type="button" id="dropdown-notifications" title="notifications" data-toggle="dropdown" class="btn btn-link nav-link dropdown-toggle"><i class="fa fa-bell fa-fw fa-lg"></i></button>
-          <ul class="dropdown-menu dropdown-menu-right mt-2">
-              <li class="px-3 py-2" *ngFor="let notification of notifications">
-                  <a [routerLink]="notification.link" class="list-item">{{notification.message}}</a>
-              </li>
-              <li *ngIf="notifications.length < 1">
-                <div class="text-center">No Notifications</div>
-              </li>
-          </ul>
-        </li>
-      <li class="nav-item"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
-      <li class="nav-item dropdown" *ngIf="!(userSession?.user?.username)">
-          <button type="button" id="dropdown-login" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-          <ul class="dropdown-menu dropdown-menu-right mt-2">
-              <li class="px-3 py-2">
-                  <form class="form" role="form" [formGroup]="login" (ngSubmit)="onLogin()">
-                      <div class="text-error" id="login-error" *ngIf="loginErrorMessage">{{loginErrorMessage}}</div>
-                      <div class="form-group">
-                          <input id="usernameInput" formControlName="username" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                      </div>
-                      <div class="form-group">
-                          <input id="passwordInput" formControlName="password" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                      </div>
-                      <div class="form-group">
-                          <button type="submit" class="btn btn-primary btn-block">Login</button>
-                      </div>
-                      <div class="form-group text-center">
-                          <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small><br>
-                          <small><a href="#" routerLink='/signup'>Sign up</a></small>
-                      </div>
-                  </form>
-              </li>
-          </ul>
-      </li>
-      <li class="dropdown order-1" *ngIf="userSession?.user?.username">
-          <button type="button" id="dropdown-user-session-nav" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">
+        <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
+            <li class="nav-item dropdown" [ngClass]="{'active': notifications.length > 0}">
+                <!-- <a href="#" class="nav-link dropdown-toggle"  id="dropdown-notifications" title="notifications"><i class="fa fa-bell fa-fw fa-lg"></i></a> -->
+                <button type="button" id="dropdown-notifications" title="notifications" data-toggle="dropdown" class="btn btn-link nav-link dropdown-toggle"><i class="fa fa-bell fa-fw fa-lg"></i></button>
+                <ul class="dropdown-menu dropdown-menu-right mt-2">
+                    <li class="px-3 py-2" *ngFor="let notification of notifications">
+                        <a [routerLink]="notification.link" class="list-item">{{notification.message}}</a>
+                    </li>
+                    <li *ngIf="notifications.length < 1">
+                        <div class="text-center">No Notifications</div>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
+            <li class="nav-item dropdown" *ngIf="!(userSession?.user?.username)">
+                <button type="button" id="dropdown-login" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
+                <ul class="dropdown-menu dropdown-menu-right mt-2">
+                    <li class="px-3 py-2">
+                        <form class="form" role="form" [formGroup]="login" (ngSubmit)="onLogin()">
+                            <div class="text-error" id="login-error" *ngIf="loginErrorMessage">{{loginErrorMessage}}</div>
+                            <div class="form-group">
+                                <input id="usernameInput" formControlName="username" placeholder="Email" class="form-control form-control-sm" type="email" required="">
+                            </div>
+                            <div class="form-group">
+                                <input id="passwordInput" formControlName="password" placeholder="Password" class="form-control form-control-sm" type="password" required="">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            </div>
+                            <div class="form-group text-center">
+                                <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small><br>
+                                <small><a href="#" routerLink='/signup'>Sign up</a></small>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown order-1" *ngIf="userSession?.user?.username">
+                <button type="button" id="dropdown-user-session-nav" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">
     <i class="fa fa-hand-lizard-o lizard fa-fw fa-md" *ngIf="isAdmin()" style="margin-right:5px;"></i>{{userSession?.user?.username}} <span class="caret"></span>
   </button>
-          <ul class="dropdown-menu dropdown-menu-right mt-2">
-              <li class="px-3 py-2 list-group-item-action">Preferences</li>
-              <li class="px-2">
-                  <hr style="margin-top:-1px;margin-bottom:-1px;" />
-              </li>
-              <li class="px-3 py-2 list-group-item-action" (click)="toggleAdmin()" *ngIf="hasAdmin()">Toggle Admin</li>
-              <li class="px-3 py-2 list-group-item-action" routerLink="/admin" *ngIf="isAdmin()">System Settings</li>
-              <li class="px-2">
-                  <hr style="margin-top:-1px;margin-bottom:-1px;" />
-              </li>
-              <li class="px-3 py-2 list-group-item-action" (click)="logout()">Logout</li>
-          </ul>
-      </li>
-  </ul>
-</div>
+                <ul class="dropdown-menu dropdown-menu-right mt-2">
+                    <li class="px-3 py-2 list-group-item-action">Preferences</li>
+                    <li class="px-2">
+                        <hr style="margin-top:-1px;margin-bottom:-1px;" />
+                    </li>
+                    <li class="px-3 py-2 list-group-item-action" (click)="toggleAdmin()" *ngIf="hasAdmin()">Toggle Admin</li>
+                    <li class="px-3 py-2 list-group-item-action" routerLink="/admin" *ngIf="isAdmin()">System Settings</li>
+                    <li class="px-2">
+                        <hr style="margin-top:-1px;margin-bottom:-1px;" />
+                    </li>
+                    <li class="px-3 py-2 list-group-item-action" (click)="logout()">Logout</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </nav>
-
